# claudeless

./: .gitignore  .v0.rc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TEST_MCP.md  TODO.md  deny.toml  fixtures.md  quench.toml  report.txt
crates/capsh/: Cargo.toml  README.md  clippy.toml
crates/capsh/src/: main.rs  nbio.rs  pty.rs  recording.rs  recording_tests.rs  screen.rs  screen_tests.rs  script.rs  script_tests.rs  session.rs
crates/capsh/tests/: integration.rs  snapshots.rs
crates/capsh/tests/fixtures/: vi_empty_file.txt  vi_hello_world.txt  vi_multiline.txt
crates/capture/: Cargo.toml
crates/capture/src/: duration_serde.rs  interaction.rs  interaction_tests.rs  lib.rs  log.rs  log_tests.rs
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/docs/: LIMITATIONS.md  SCENARIOS.md  USAGE.md
crates/cli/src/: api.rs  api_tests.rs  capture.rs  capture_spec.rs  capture_spec_tests.rs  capture_tests.rs  cli.rs  cli_tests.rs  config.rs  config_tests.rs  env.rs  env_tests.rs  event_types.rs  failure.rs  failure_tests.rs  help.rs  help_tests.rs  inspect.rs  inspect_tests.rs  lib.rs  main.rs  output.rs  output_diagnostic.rs  output_diagnostic_tests.rs  output_events.rs  output_tests.rs  scenario.rs  scenario_tests.rs  time.rs  time_tests.rs  usage.rs
crates/cli/src/ansi/: mod.rs  parser.rs  parser_tests.rs
crates/cli/src/capture/: interaction.rs  interaction_tests.rs  log.rs  log_tests.rs  mod.rs
crates/cli/src/hooks/: executor.rs  executor_tests.rs  loader.rs  loader_tests.rs  mod.rs  protocol.rs  protocol_tests.rs  registry.rs  registry_tests.rs
crates/cli/src/mcp/: client.rs  client_tests.rs  config.rs  config_tests.rs  mod.rs  protocol.rs  protocol_tests.rs  server.rs  server_tests.rs  tools.rs  tools_tests.rs  transport.rs  transport_tests.rs
crates/cli/src/permission/: bypass.rs  bypass_tests.rs  check.rs  check_tests.rs  mod.rs  mode.rs  mode_tests.rs  pattern.rs  pattern_tests.rs
crates/cli/src/runtime/: builder.rs  builder_tests.rs  context.rs  context_tests.rs  core.rs  core_tests.rs  mod.rs  print_mode.rs
crates/cli/src/session/: context.rs  context_tests.rs  mod.rs
crates/cli/src/state/: directory.rs  directory_tests.rs  index.rs  index_tests.rs  io.rs  mod.rs  mod_tests.rs  paths.rs  paths_tests.rs  persistence.rs  persistence_tests.rs  plans.rs  plans_tests.rs  session.rs  session_tests.rs  sessions_index.rs  sessions_index_tests.rs  settings.rs  settings_loader.rs  settings_loader_tests.rs  settings_source.rs  settings_source_tests.rs  settings_tests.rs  todos.rs  todos_tests.rs  words.rs  words_tests.rs
crates/cli/src/state/session/: jsonl.rs  jsonl_tests.rs
crates/cli/src/tools/: executor.rs  executor_tests.rs  mcp_executor.rs  mcp_executor_tests.rs  mod.rs  result.rs  result_tests.rs  tool_name.rs  tool_name_tests.rs
crates/cli/src/tools/builtin/: bash.rs  bash_tests.rs  edit.rs  edit_tests.rs  glob.rs  glob_tests.rs  grep.rs  grep_tests.rs  input.rs  input_tests.rs  mod.rs  mod_tests.rs  read.rs  read_tests.rs  stateful.rs  stateful_tests.rs  test_helpers.rs  test_helpers_tests.rs  write.rs  write_tests.rs
crates/cli/src/tools/mcp/: client.rs  client_tests.rs  mod.rs  mod_tests.rs  protocol.rs  protocol_tests.rs  transport.rs  transport_tests.rs
crates/cli/src/tui/: app.rs  app_elicitation_tests.rs  app_exit_tests.rs  app_keybinding_tests.rs  app_menu_tests.rs  app_permission_tests.rs  app_plan_approval_tests.rs  app_tests.rs  colors.rs  colors_tests.rs  mod.rs  responsive_tests.rs  screenshot.rs  screenshot_tests.rs  separator.rs  separator_tests.rs  shortcuts.rs  shortcuts_tests.rs  slash_menu.rs  slash_menu_tests.rs  spinner.rs  spinner_tests.rs  streaming.rs  streaming_tests.rs  test_helpers.rs  test_helpers_tests.rs
crates/cli/src/tui/app/: commands.rs  commands_tests.rs  content.rs  dialog_state.rs  dialogs.rs  display_state.rs  format.rs  format_tests.rs  input.rs  input_state.rs  render.rs  render_dialogs.rs  state.rs  types.rs
crates/cli/src/tui/app/commands/: commands_tests.rs  display.rs  execution.rs  execution_tests.rs  export.rs  mod.rs  permission.rs  permission_tests.rs
crates/cli/src/tui/app/dialogs/: boxed.rs  help.rs  mod.rs  panels.rs  simple.rs  tool_dialogs.rs
crates/cli/src/tui/app/render/: content.rs  dialogs.rs  format.rs  mod.rs
crates/cli/src/tui/app/state/: dialog.rs  display.rs  mod.rs
crates/cli/src/tui/widgets/: context.rs  elicitation.rs  elicitation_tests.rs  export.rs  export_tests.rs  help.rs  help_tests.rs  hooks.rs  hooks_tests.rs  memory.rs  memory_tests.rs  mod.rs  model_picker.rs  model_picker_tests.rs  permission.rs  permission_tests.rs  plan_approval.rs  plan_approval_tests.rs  scrollable.rs  scrollable_tests.rs  setup.rs  setup_tests.rs  tasks.rs  tasks_tests.rs  thinking.rs  thinking_tests.rs  tool_block.rs  trust.rs  trust_tests.rs
crates/cli/src/validation/: cli_audit.rs  cli_audit_tests.rs  mod.rs  output_samples.rs  output_samples_tests.rs  report.rs  report_tests.rs
crates/cli/tests/: capsh_specs.rs  cli_fixtures.rs  cli_flags.rs  cli_specs.rs  dot_claude_plans.rs  dot_claude_projects.rs  dot_claude_todos.rs  error_jsonl.rs  exit_behavior.rs  failure_simulation.rs  mcp_config.rs  mcp_scenarios.rs  output_format.rs  permission_modes.rs  runtime_integration.rs  scenario_fields.rs  scenario_validation.rs  settings_loading.rs  settings_permissions.rs  smoke_test.rs  stream_json.rs  tmux_specs.rs  tui_clear.rs  tui_compacting.rs  tui_context.rs  tui_exit.rs  tui_export.rs  tui_fork.rs  tui_help.rs  tui_hooks.rs  tui_interaction.rs  tui_memory.rs  tui_model.rs  tui_permission.rs  tui_responsive.rs  tui_setup.rs  tui_shell_mode.rs  tui_shortcuts.rs  tui_slash_search.rs  tui_snapshot.rs  (+7 more)
crates/cli/tests/common/: ansi.rs  mod.rs  mod_tests.rs  tmux.rs
crates/cli/tests/fixtures/: .gitignore
crates/cli/tests/fixtures/cli/: CLAUDE.md
crates/cli/tests/fixtures/dotclaude/: CLAUDE.md
crates/cli/tests/fixtures/tui/: CLAUDE.md
crates/cli/tests/specs/: mod.rs
crates/test-capture/: Cargo.toml
crates/test-capture/src/: lib.rs  main.rs
(+836 files in other folders)
