[package]
name = "capsh"
version = "0.1.0"
edition = "2021"
description = "Headless terminal capture with scripting DSL"
license = "MIT"
repository = "https://github.com/anthropics/claudeless"
keywords = ["terminal", "pty", "capture", "headless"]
categories = ["command-line-utilities"]

[[bin]]
name = "capsh"
path = "src/main.rs"

[dependencies]
# PTY handling (same features as ht)
nix = { version = "0.28", features = ["term", "process", "fs", "signal"] }

# Terminal emulation (same as ht uses)
avt = "0.16"

# CLI
clap = { version = "4", features = ["derive"] }

# Async I/O
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization (for frame output)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex for wait patterns
regex = "1"

[dev-dependencies]
tempfile = "3"
