[package]
name = "claudeless-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interaction capture and recording for claudeless tests"
repository = "https://github.com/alfredjeanlab/claudeless"
keywords = ["claude", "testing", "capture", "recording"]
categories = ["development-tools::testing"]

[lib]
name = "claudeless_capture"
path = "src/lib.rs"

[dependencies]
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest = "0.26"
proptest = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
