[package]
name = "test-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test capture and comparison utilities for claudeless"

[lib]
name = "test_capture"
path = "src/lib.rs"

[[bin]]
name = "test-capture"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
